Use old collector