@@ -26,6 +26,7 @@ package net.kyori.indra.git.internal;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 import javax.inject.Inject;
 import net.kyori.indra.git.IndraGitExtension;
 import net.kyori.indra.git.QueryBranch;
@@ -133,7 +134,7 @@ public class IndraGitExtensionImpl implements IndraGitExtension {
   @Override
   public @NotNull Provider<List<String>> tagNames() {
     return this.repositoryValue(QueryTags.Names.class)
-      .map(list -> list.stream().map(Repository::shortenRefName).toList());
+      .map(list -> list.stream().map(Repository::shortenRefName).collect(Collectors.toList()));
   }
 
   @Override
